[gd_scene load_steps=14 format=2]

[ext_resource path="res://GameObjects/Sword.gd" type="Script" id=1]
[ext_resource path="res://Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Sword/22-Sword Spinning/Sword Spinning 02.png" type="Texture" id=2]
[ext_resource path="res://Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Sword/22-Sword Spinning/Sword Spinning 03.png" type="Texture" id=3]
[ext_resource path="res://Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Sword/22-Sword Spinning/Sword Spinning 01.png" type="Texture" id=4]
[ext_resource path="res://Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Sword/22-Sword Spinning/Sword Spinning 04.png" type="Texture" id=5]
[ext_resource path="res://Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Sword/23-Sword Embedded/Sword Embedded 03.png" type="Texture" id=6]
[ext_resource path="res://Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Sword/23-Sword Embedded/Sword Embedded 04.png" type="Texture" id=7]
[ext_resource path="res://Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Sword/23-Sword Embedded/Sword Embedded 01.png" type="Texture" id=8]
[ext_resource path="res://Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Sword/23-Sword Embedded/Sword Embedded 02.png" type="Texture" id=9]
[ext_resource path="res://Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/Sword/21-Sword Idle/Sword Idle 01.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": false,
"name": "idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "spin",
"speed": 10.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": false,
"name": "embed",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.13943, 3.53823 )

[node name="RigidBody2D" type="RigidBody2D"]
collision_layer = 0
collision_mask = 26
mass = 1.2
gravity_scale = 3.0
continuous_cd = 2
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="Animation" type="AnimatedSprite" parent="."]
position = Vector2( 0.00451279, -0.00451565 )
z_index = 3
frames = SubResource( 1 )
animation = "spin"
frame = 3
playing = true

[node name="ThrowShape" type="CollisionShape2D" parent="."]
position = Vector2( 0.334084, 0.445446 )
shape = SubResource( 2 )

[node name="PickUpShape" type="CollisionShape2D" parent="."]
position = Vector2( 4.00904, 0.890896 )
shape = SubResource( 3 )
disabled = true

[connection signal="body_entered" from="." to="." method="_on_RigidBody2D_body_entered"]
